# marketing_analytics

./: .gitignore  Dockerfile  README.md  ads_data.json  docker-compose.yaml  requirements.txt  session_name.session  session_name.session-journal
.github/workflows/: ci-cd.yml
data/processed/: .gitignore  App_install_processed.csv.dvc  playstorereviews_processed.csv.dvc  real_install_processed.csv.dvc  telegramsubscription_processed.csv.dvc  tickvah_ads_processed.csv.dvc
data/raw/: .gitignore  ads_data.csv.dvc  ads_data.json.dvc  bank_ads.csv.dvc  daily_install_count.csv  daily_telegram_subscriptions.csv.dvc  installations.csv.dvc  (+3 more)
kedro_project/: pyproject.toml  requirements.txt
kedro_project/conf/base/: catalog.yml  credentials.yml  parameters.yml
kedro_project/data/01_raw/: bank_ads.csv  daily_telegram_subscriptions.csv  playstore_reviews.csv
kedro_project/data/processed/: App_install_processed.csv  playstorereviews_processed.csv  real_install_processed.csv  telegramsubscription_processed.csv  tickvah_ads_processed.csv
kedro_project/src/kedro_project/: __init__.py  __main__.py  pipeline_registry.py  settings.py
kedro_project/src/kedro_project/pipelines/data_processing/: nodes.py  pipeline.py
kedro_project/src/kedro_project/pipelines/data_science/: nodes.py  pipeline.py
marketanalysis/: README.md  pyproject.toml  requirements.txt
scripts/: db_connection.py  docker-compose.yml  fetch_playstore_data.py  fetch_telegram_data.py  load_data_to_db.py  migrate_dashboard.py  migrate_database.py  process_data.py  scrap_tickvah_ads.py  setup_metabase.sh
(+12 files in other folders)
